# strata

./: .dockerignore  .gitignore  .railwayignore  AGENTS.md  Cargo.toml  Dockerfile  skills-lock.json
.claude/skills/: jolt
archive/strata-jolt/guest/: Cargo.toml
archive/strata-jolt/guest/src/: lib.rs
archive/strata-jolt/src/: main.rs
contracts/: .gitignore  foundry.toml
contracts/src/: StrataRollup.sol
contracts/test/: StrataRollup.t.sol
crates/strata-agent/: Cargo.toml  README.md  soul.md
crates/strata-agent/src/: agent.rs  batch.rs  chat.html  embed.rs  error.rs  identity.rs  lib.rs  main.rs  persist.rs  pipeline.rs  poster.rs  prover.rs  reconstruct.rs  server.rs  tools.rs
crates/strata-agent/src/embed/: api.rs  binarize.rs  local.rs  mod.rs
crates/strata-agent/src/llm/: anthropic.rs  mod.rs  openai.rs
crates/strata-agent/tests/: agent_test.rs  batch_test.rs  e2e_test.rs  embed_test.rs  llm_types.rs  persist_test.rs  pipeline_test.rs  poster_test.rs  prover_test.rs  reconstruct_test.rs  server_test.rs  tools_test.rs
crates/strata-agent/tests/common/: mod.rs
crates/strata-core/: Cargo.toml
crates/strata-core/src/: error.rs  lib.rs  primitives.rs  types.rs
crates/strata-guest/: Cargo.toml
crates/strata-guest/src/: mmr.rs
crates/strata-guest/tests/: cross_validation.rs
crates/strata-proof/: Cargo.toml
crates/strata-proof/src/: error.rs  hasher.rs  lib.rs  mmr.rs  transition.rs  witness.rs
crates/strata-proof/tests/: cross_validation.rs
crates/vector-db/: Cargo.toml
crates/vector-db/src/: db.rs  error.rs  keccak.rs  lib.rs  query.rs
crates/vector-db/tests/: integration.rs
docs/: README.md  codemode.md  implementation-plan.md  onchain.md  proving.md  qmdb-migration.md  reconstruction.md  roadmap.md  skills.md  soul.md  state-model.md  storage.md  submission.md  trust-model.md  vector-db.md
docs/specs/: core-types.md  index.md  proof-boundary.md  vector-db.md
scripts/: e2e-prover-loop.sh
spikes/jolt-merkle/: Cargo.toml  RESULTS.md
spikes/jolt-merkle/guest/: Cargo.toml
spikes/jolt-merkle/guest/src/: lib.rs
spikes/jolt-merkle/src/: main.rs
spikes/mmr/: Cargo.toml
spikes/mmr/src/: journaled.rs  main.rs
strata-jolt/: Cargo.toml
strata-jolt/guest/: Cargo.toml
strata-jolt/guest/src/: lib.rs
strata-jolt/src/: main.rs
strata-openvm/: Cargo.toml
strata-openvm/guest/: Cargo.toml
strata-openvm/guest/src/: main.rs
strata-openvm/src/: main.rs
