[workspace]
members = ["guest"]

[package]
name = "strata-openvm-host"
version = "0.1.0"
edition = "2024"

[dependencies]
openvm-sdk = "1"
openvm-stark-sdk = "1"
openvm-transpiler = "1"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strata-core = { path = "../crates/strata-core", features = ["serde"] }
strata-proof = { path = "../crates/strata-proof", features = ["serde"] }
