[workspace]
members = ["guest"]

[package]
name = "strata-openvm-host"
version = "0.1.0"
edition = "2024"

[dependencies]
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0", features = ["evm-verify"] }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0" }
eyre = "0.6"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strata-core = { path = "../crates/strata-core", features = ["serde"] }
strata-proof = { path = "../crates/strata-proof", features = ["serde"] }
