[package]
name = "strata-agent"
version = "0.1.0"
edition = "2024"

[features]
default = []
local-embed = ["dep:tract-onnx", "dep:tokenizers"]

[dependencies]
strata-core = { path = "../strata-core", features = ["std", "serde"] }
strata-vector-db = { path = "../vector-db" }

commonware-runtime = "2026.3.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
thiserror = "2"

tract-onnx = { version = "0.21", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["fancy-regex"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
