[package]
name = "strata-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["commonware-codec/std", "blake3/std"]
serde = ["dep:serde"]

[dependencies]
blake3 = { version = "1.8", default-features = false }
bytes = { version = "1.10.1", default-features = false }
commonware-codec = { version = "2026.3.0", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive", "alloc"], optional = true }
