[package]
name = "strata-proof"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["strata-core/std", "commonware-codec/std", "alloy-primitives/std"]
serde = ["dep:serde", "strata-core/serde"]

[dependencies]
strata-core = { path = "../strata-core", default-features = false }
commonware-codec = { version = "2026.3.0", default-features = false }
alloy-primitives = { version = "1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
strata-vector-db = { path = "../vector-db" }
commonware-cryptography = "2026.3.0"
commonware-runtime = "2026.3.0"
commonware-storage = { version = "2026.3.0", features = ["std"] }
