[package]
name = "strata-openvm-guest"
version = "0.1.0"
edition = "2024"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0" }
openvm-keccak256-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
strata-core = { path = "../../crates/strata-core", default-features = false, features = ["serde"] }
strata-proof = { path = "../../crates/strata-proof", default-features = false, features = ["serde"] }
